# singular_framework

./: .gitignore  README.md  pyproject.toml
src/singular/: __init__.py  cli.py  vars.py
src/singular/core/: _element.py  _style.py  core.py  render.py  routes.py  server.py
src/singular/ui/: components.py
src/singular/ui/static/_css/: style.css
src/singular/ui/templates/: page.html
src/test_app/pages/auth/admin/[id]/: page.py
src/test_app/pages/auth/login/: page.py
tests/scola/: __init__.py
tests/scola/pages/: leyout.py  page.py
tests/scola/pages/posts/: page.py
tests/scola/pages/posts/[id]/: page.py
tests/scola/ui/: sidebar.py  style.py
tests/test_app/: main.py
tests/test_app/assets/: dashboard.css  index.css
tests/test_app/pages/: page.py
tests/test_app/pages/dashboard/: page.py
tests/test_app/pages/dashboard/components/: sidebar.py
