[project]
name = "singular"
version = "0.1.0"
description = ""
authors = [
    {name = "luby404",email = "ricardokayoca@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "gunicorn (>=25.0.1,<26.0.0)"
]

[tool.poetry]
packages = [{include = "singular", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
